--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
+    "start": "node dist/server.js",
+    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,json,mustache src/server.ts"
   },
@@ -19,14 +24,14 @@
   },
   "homepage": "https://github.com/luanamsilva/sm-personalizados#readme",
   "dependencies": {
-
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mustache-express": "^1.3.2"
   },
   "devDependencies": {
-    "@types/mustache-express": "^1.2.2",    
     "@types/express": "^4.17.14",
-    "@types/node": "^18.11.10"
+    "@types/mustache-express": "^1.2.2",
+    "@types/node": "^18.11.10",
+    "copyfiles": "^2.4.1"
   }
 }
